add font-awosome icon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Frontend Mentor | Clipboard landing page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -165,13 +172,14 @@
         <nav class="footer-nav-2">
           <ul>
             <a href="#"
-              ><li><img src="images/icon-facebook.svg" alt="facebook" /></li
+              ><li>
+                <i class="fab fa-facebook-square"></i></li
             ></a>
             <a href="#"
-              ><li><img src="images/icon-twitter.svg" alt="twitter" /></li
+              ><li><i class="fab fa-twitter"></i></li
             ></a>
             <a href="#"
-              ><li><img src="images/icon-instagram.svg" alt="instagram" /></li
+              ><li><i class="fab fa-instagram"></i></li
             ></a>
           </ul>
         </nav>
